@startuml
    ' Copyright to this UML and generated images belongs to the author of the corresponding Java sources.

    ' This UML was generated by UMLDoclet (C) Copyright 2016-2025 Talsma ICT.
    ' UMLDoclet 2.2.1 is licensed under the Apache License, version 2.0
    ' and contains parts of PlantUML 1.2024.7 (ASL) Copyright 2009-2025, Arnaud Roques.

    !pragma layout smetana
    set separator ::

    package com.smartbay.progettofinale.Config {

        class WebConfig [[WebConfig.html]] {
            +addInterceptors(InterceptorRegistry): void
        }

        class SecurityConfig [[SecurityConfig.html]] {
            +filterChain(HttpSecurity): SecurityFilterChain
            +configureGlobal(AuthenticationManagerBuilder): void
            +authenticationManager(AuthenticationConfiguration): AuthenticationManager
        }

        class NotificationInterceptor [[NotificationInterceptor.html]] {
            +postHandle(HttpServletRequest, HttpServletResponse, Object, ModelAndView): void
        }

    }

    package org.springframework.web.servlet.config.annotation {
        interface WebMvcConfigurer {
            +configurePathMatch(PathMatchConfigurer): void
            +configureContentNegotiation(ContentNegotiationConfigurer): void
            +configureAsyncSupport(AsyncSupportConfigurer): void
            +configureDefaultServletHandling(DefaultServletHandlerConfigurer): void
            +addFormatters(FormatterRegistry): void
            +addInterceptors(InterceptorRegistry): void
            +addResourceHandlers(ResourceHandlerRegistry): void
            +addCorsMappings(CorsRegistry): void
            +addViewControllers(ViewControllerRegistry): void
            +configureViewResolvers(ViewResolverRegistry): void
            +addArgumentResolvers(List<HandlerMethodArgumentResolver>): void
            +addReturnValueHandlers(List<HandlerMethodReturnValueHandler>): void
            +configureMessageConverters(List<HttpMessageConverter<?>>): void
            +extendMessageConverters(List<HttpMessageConverter<?>>): void
            +configureHandlerExceptionResolvers(List<HandlerExceptionResolver>): void
            +extendHandlerExceptionResolvers(List<HandlerExceptionResolver>): void
            +addErrorResponseInterceptors(List<Interceptor>): void
            +getValidator(): Validator
            +getMessageCodesResolver(): MessageCodesResolver
        }
    }

    package org.springframework.web.servlet {
        interface HandlerInterceptor {
            +preHandle(HttpServletRequest, HttpServletResponse, Object): boolean
            +postHandle(HttpServletRequest, HttpServletResponse, Object, ModelAndView): void
            +afterCompletion(HttpServletRequest, HttpServletResponse, Object, Exception): void
        }
    }

    org.springframework.web.servlet.config.annotation::WebMvcConfigurer <|.. com.smartbay.progettofinale.Config::WebConfig
    org.springframework.web.servlet::HandlerInterceptor <|.. com.smartbay.progettofinale.Config::NotificationInterceptor

    <style>
        footer {
            HyperLinkColor #8
            HyperLinkUnderlineThickness 0
        }
    </style>
    footer \n[[https://github.com/talsma-ict/umldoclet UMLDoclet 2.2.1]]
    ' Generated 2025-08-31T20:08:00.926605565+02:00[Europe/Rome]
@enduml
